# ml

./: .gitignore  README.md  pyproject.toml
Linear_Regression/: Linear regression.excalidraw  Linear regressionF.excalidraw  Linear_Reg_Metrics_.excalidraw  Polynomial Regression.excalidraw  Polynomial_Regression.py  linear_regression.py  metrics.py  regularization_L2.py  regulaziation_L1.py
Manim/: 1x1_conv.py  Demo_manim.py  batchnorm.py  cnn_manim.py  conv.py  layer_norm.py  skip_conn.py  transfer_learning_manim.py
Naïve Bayes/: main.py
Python_env/: Readme.md  main.ipynb  pyproject.toml
Supervised_Learning/: classification_metrics.py  cross_validation.py
Supervised_Learning/AdaBoost/: main.py
Supervised_Learning/CNN/: VGG16.py  activation_fun.py  edges.py  main.py
Supervised_Learning/Decision_Tree/: main.py
Supervised_Learning/Gradient_Boosting/: classifier.py  regresso.py
Supervised_Learning/K-Means/: main.py  optimal_K.py
Supervised_Learning/KNN/: main.py
Supervised_Learning/NN/: loss_functions_pytorch.ipynb  main.py
Supervised_Learning/Raisin_classification_project/: decision_tree_classifier.py  email_spam_classifer.py  logistic_regression_classifier.py  main.py  naive_bayes_classifier.py  raisin_classifier.py  svm_classifier.py
Supervised_Learning/Real_project/: House_Price_Prediction_Regression_XGBoost.ipynb  app.py  (+3 more)
Unsupervised_Learning/: clustering_mettrics.py
classification_project/: DT_classifier.py  decision_tree_classifier.py  logistic_regression.py  naive_bayes.py  naive_bayes_classifier.py  raisin_classifier.py  svm.py
decision_tree/: main.py
logistic_regression/: main.py
(+30 files in other folders)
