[tool.poetry]
name = "Ml"
version = "0.1.0"
description = "Machine Learning Course: Intuitive Understanding with Numerical & Python Examples"
authors = ["deep knowledge <deepp.knowledge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^3.0.0"
numpy = "^1.22.0"
requests = "^2.32.3"
matplotlib = "^3.9.3"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
lightgbm = "^4.0.0"
pyyaml = "^6.0.0"
mlflow = "^2.20.1"
xgboost = "2.0.3"
graphviz = "^0.20.3"

torch = { version = "1.13.1+cu117", source="torch"}
torchaudio = { version = "^0.13.1+cu117", source="torch"}
torchvision = { version = "0.14.1+cu117", source="torch"}
manim = "<0.19.0"
seaborn = "^0.13.2"
shap = "^0.47.2"
streamlit = "1.2.0"
protobuf = "3.20.3"
altair = "4.2.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

