[tool.poetry]
name = "Ml"
version = "0.1.0"
description = "Machine Learning Course: Intuitive Understanding with Numerical & Python Examples"
authors = ["deep knowledge <deepp.knowledge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^3.0.0"
numpy = "^1.22.0"
requests = "^2.32.3"
matplotlib = "^3.9.3"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
lightgbm = "^4.0.0"
pyyaml = "^6.0.0"
mlflow = "^2.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
